tests/neg/loops/for-rec-00.ts
/*@ forloop :: forall A. (number, A) => {v:A | true} */
function forloop(lo, acc){
//  if (lo < hi) {
    // var newAcc = body(lo, acc);
    //return forloop(lo + 1, hi, body, hi);
//  }
  assert(false);
  return acc;
}

